--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -34,17 +34,17 @@
 	<div class="hp-blocks"	>
 		<div class="container">
 			<div class="anounce">
-				<div><span class="brand">Feed<span>Fiction</span></span> is the place to write short stories together with friends.</div>
+				<div><!-- <span class="brand">Feed<span>Fiction</span></span> is the place to write short stories together with friends.</div> -->
 
-				<div>Upload a photo from Facebook, Instagram or your Desktop,
-				start writing a story, and let your friends continue.</div>
+				<div>Turn Photos into Beautiful Stories</div>
+				<div>It’s Fun, Easy and Only 55 Words</div>
 
 					<!-- <div>Sign up with Facebook and start your story.</div> -->
 					<div class="wrapper-sign-in">
 			 			<span class="sign-in btn-signin-large"></span>
 			 		</div>
 				 	
-				 	<div class="slogan">FeedFiction is reinventing storytelling in 55 words</div>
+				 	<!-- <div class="slogan">FeedFiction is reinventing storytelling in 55 words</div> -->
 			 
 				
 				<!-- <div class="story-panel">
@@ -58,7 +58,7 @@
 				</div> -->
 
 
-			
+			</div>
 			</div>
 			
 
