fix sb-lign in story page

--- a/app/views/layouts/_start_story_link.html.erb
+++ b/app/views/layouts/_start_story_link.html.erb
@@ -1,3 +1,3 @@
 <% if current_user %>
-<li class="start-new-story"><a class="userFunction link" data-function="startStoryModal" alt="Start new Story" title="Start new Story"><i class="ico-edit ico-white"></i> <!-- <span>Start a story</span> --></a></li>
+<li class="start-new-story"><a class="userFunction link" data-function="startStoryModal" alt="Start new Story" title="Start new Story"><i class="ico-edit ico-white"></i><span>Start a story</span></a></li>
 <%end%>
