--- a/app/views/layouts/_unregisterd_modals.html.erb
+++ b/app/views/layouts/_unregisterd_modals.html.erb
@@ -9,7 +9,7 @@
   <div class="preloader hide"></div>
   
   <div class="modal-body">
-    <div>To check this out you need to sign in to FeedFiction</div>
+    <div class="message">To check this out you need to sign in to FeedFiction</div>
     <div>Try it. It's Free.</div>
     <hr/>
     <span class="sign-in btn-signin-large"></span>
