--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -423,7 +423,7 @@ header {
 			text-align: center;
 			li {
 				display: inline-block;
-				padding: 2px 5px;
+				padding: 5px 10px;
 				a {
 						color: #666;
 				}
@@ -694,6 +694,17 @@ footer {
 
 
 /* Home page */
+#StartStoryHomePageWizard {
+	.modal-footer {
+		padding: 20px !important;
+		/*font-family: $story-font;*/
+		text-align: center;
+		font-size: 15px;
+		a {
+			cursor: pointer;
+		}
+	}
+}
 
 
 /* Photo Stream
@@ -1075,7 +1086,7 @@ footer {
 	border-radius: 90px;
   -moz-border-radius: 90px;
   -webkit-border-radius: 90px;
-  border: 1px solid #eee;
+  border: 3px solid #eee;
 }
 
 .round-avatar-large {
@@ -1090,7 +1101,7 @@ footer {
 	border-radius: 90px;
   -moz-border-radius: 90px;
   -webkit-border-radius: 90px;
-	border: 1px solid #29A9DF;
+	border: 3px dashed #444;
 }
 
 .continue-story-text-area {
@@ -1109,7 +1120,7 @@ footer {
 	}
 	.textarea-with-button{
 		textarea {
-			width: 82%;
+			width: 81%;
 		}
 
 		label.fb-icon {
@@ -1159,9 +1170,9 @@ footer {
 	/*overflow: hidden;*/
 	background-color: #fff;
 	&:hover {
-		-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
-		-moz-box-shadow: 0 0 8px rgba(0,0,0,0.2);
-		box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+		-webkit-box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+		-moz-box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+		box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
 	}
 }
 #story-container {
@@ -1176,8 +1187,8 @@ footer {
 
 	.story-item {
 		/*border: 1px solid #fcfcfc;*/
-		-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.25);
-    box-shadow: 0px 1px 1px rgba(0,0,0,.25);
+		-webkit-box-shadow: 0px 2px 4px rgba(0,0,0,.25);
+    box-shadow: 0px 2px 4px rgba(0,0,0,.25);
     overflow: hidden;
     background-color: #fff;
 
@@ -1323,7 +1334,7 @@ ul.commentlist {
 				margin:0;
 			}
 			textarea {
-				width: 266px;
+				width: 261px;
 				height: 30px;
 			}
 
@@ -1456,7 +1467,7 @@ ul.commentlist {
 	}
 
 	.continue-story-text-area .textarea-with-button textarea {
-		width: 88%;
+		width: 87%;
 	}
 
 
@@ -1485,7 +1496,7 @@ ul.commentlist {
 		padding: 10px;
 		.add-comment {
 			textarea {
-					width: 460px;
+					width: 457px;
 			}
 			.actions {
 				padding: 10px 0;
@@ -1677,7 +1688,7 @@ ul.commentlist {
 		width: 790px;
 }*/
 
-#StartStoryModal {
+#StartStoryModal , #StartStoryHomePageWizard {
 	h2,h3 {
 		/*text-align: center;*/
 	}
@@ -2104,7 +2115,7 @@ ul.commentlist {
 	position: relative;
 	.slider-wrapper {
 		background: url('slider/slider4.jpg') no-repeat;
-		height: 500px;
+		height: 350px;
 		width: 100%;
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
@@ -2174,7 +2185,7 @@ ul.commentlist {
 			font-family: "Sanchez", serif;
 			/*background: rgba(0,0,0,0.65);*/
 			color: #fff;
-			font-size: 40px;
+			font-size: 45px;
 			/*max-width: 590px;*/
 			line-height: 62px;
 			text-align: center;
@@ -2192,6 +2203,22 @@ ul.commentlist {
 						position: relative;
 						/*top: 90px;
 						*/
+					}
+					.btn-large {
+						padding:0;
+						span {
+							font-size: 24px;
+							display: inline-block;
+							line-height: 10px;
+							padding-right: 10px;
+							padding-left: 10px;
+						}
+						i{
+							vertical-align: middle;
+						}
+					}
+					div{
+						font-size: 20px;
 					}
 			}
 			
@@ -2293,15 +2320,15 @@ ul.commentlist {
 	.hp-header {
 
 		.slider-wrapper {
-			height: 450px;
+			height: 350px;
 		}
 
 		.anounce {
-				font-size: 30px;
+				font-size: 38px;
 				line-height: 50px;
 				/*width: 400px;*/
 				.wrapper-sign-in {
-					padding: 110px 0;
+					padding: 100px 0;
 				}
 				.slogan {
 					font-size: 33px;
@@ -2368,7 +2395,7 @@ ul.commentlist {
 
 	.hp-header {
 		.slider-wrapper {
-			height: 370px;
+			height: 320px;
 		}
 		.photo-tile {
 				background-size: 192px;
@@ -2406,7 +2433,7 @@ ul.commentlist {
 	}
 
 	.continue-story-text-area .textarea-with-button textarea {
-		width: 80%;
+		width: 79%;
 	}
 	ul.commentlist li.add-comment {
 			textarea {
@@ -2416,7 +2443,7 @@ ul.commentlist {
 	}
 
 	.story-page ul.commentlist li .add-comment textarea {
-		width: 88%;
+		width: 87%;
 	}
 
 	/*Story modal */
@@ -2462,7 +2489,7 @@ ul.commentlist {
 
 	.hp-header {
 		.slider-wrapper {
-			height: 300px;
+			height: 250px;
 			
 		}
 
@@ -2605,7 +2632,7 @@ ul.commentlist {
 		margin:0 auto;
 	}
 	.story-page ul.commentlist li .add-comment textarea {
-		width: 366px;
+		width: 330px;
 	}
 }
 
@@ -2626,7 +2653,7 @@ ul.commentlist {
 	
 	.story-page {
 		.continue-story-text-area .textarea-with-button textarea {
-			width: 82%;
+			width: 80%;
 		}
 
 		ul.commentlist{
@@ -2662,7 +2689,7 @@ ul.commentlist {
 	}
 	.hp-header {
 		.slider-wrapper {
-			height: 300px;
+			height: 250px;
 			
 		}
 
@@ -2711,11 +2738,11 @@ ul.commentlist {
 		ul.commentlist{
 			li {
 				.comment .comment-des {
-						max-width: 200px;
+						max-width: 199px;
 				}
 
 				.add-comment textarea {
-					width: 188px;
+					width: 185px;
 				}
 			}
 		}
