--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -85,7 +85,7 @@
       <ul>
         <li <%= @my_feed_active%>><%=link_to 'My Feed', root_url %></li>
         <li <%= @everything_active%>><%=link_to 'All Stories', general_feed_url %></li>
-        
+        <li><%=link_to 'Invite your friends', '#', class: 'facebook_invitation_link'%></li>
         
       </ul>
      <!--  <div class="invite-friends container">
