--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1101,7 +1101,7 @@ footer {
 	border-radius: 90px;
   -moz-border-radius: 90px;
   -webkit-border-radius: 90px;
-	border: 3px dashed #444;
+	border: 3px dashed #29A9DF;
 }
 
 .continue-story-text-area {
