--- a/app/views/users/_user_header.html.erb
+++ b/app/views/users/_user_header.html.erb
@@ -10,8 +10,8 @@
       <div class="navbar-inner">
         
         <ul class="nav">
-          <li <%=@active_stories%>><a href="<%=user_url(@user)%>"><%= pluralize(@user.participate_stories.count , 'Story')%></a></li>
-          <li <%=@active_likes%>><a href="<%= likes_user_url(@user)%>"><%= pluralize(@user.likes.count ,'Like')%></a></li>
+          <li <%=@active_stories%>><a href="<%=user_url(@user)%>"><%= pluralize(@user.participate_stories.size , 'Story')%></a></li>
+          <li <%=@active_likes%>><a href="<%= likes_user_url(@user)%>"><%= pluralize(@user.likes.size ,'Like')%></a></li>
         </ul>
        
         <ul class="nav pull-right">
