added auto login in fb application

--- a/app/assets/javascripts/facebook.js.coffee.erb
+++ b/app/assets/javascripts/facebook.js.coffee.erb
@@ -35,4 +35,7 @@ window.fbAsyncInit = ->
       link: "http://feedfiction.com"
     false
 
+jQuery(document).ready ($) ->
+  isInIframe = (if (window.location isnt window.parent.location) then true else false)
+  $(".hide-in-fb-app").hide()  if isInIframe
  
