--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -419,7 +419,9 @@ header {
 	    		box-shadow: 0px 1px 1px rgba(0,0,0,.15), 0px 2px 1px rgba(0,0,0,.10), 0px 3px 1px rgba(0,0,0,.05);
 	
 		border-top: 1px solid #CFCACA;
+		position: relative;
 		ul {
+
 			text-align: center;
 			li {
 				display: inline-block;
@@ -443,6 +445,13 @@ header {
 					top: -22px;
 					font-weight: bold;
 				}
+		}
+
+		.sorting {
+			
+			ul {
+				display: inline-block;
+			}
 		}
 	}
 }
