--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1770,14 +1770,14 @@ li.current {
 .btn-success {
   background-color: #5bb75b;
   color: #ffffff;
-  background-image: -moz-linear-gradient(top, #29a9df, #29a9df);
-  background-image: -ms-linear-gradient(top, #29a9df, #29a9df);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#29a9df), to(#29a9df));
-  background-image: -webkit-linear-gradient(top, #29a9df, #29a9df);
-  background-image: -o-linear-gradient(top, #29a9df, #29a9df);
-  background-image: linear-gradient(top, #29a9df, #29a9df);
+  background-image: -moz-linear-gradient(top, #5bb75b, #5bb75b);
+  background-image: -ms-linear-gradient(top, #5bb75b, #5bb75b);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bb75b), to(#5bb75b));
+  background-image: -webkit-linear-gradient(top, #5bb75b, #5bb75b);
+  background-image: -o-linear-gradient(top, #5bb75b, #5bb75b);
+  background-image: linear-gradient(top, #5bb75b, #5bb75b);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#'29a9df, endColorstr='#'29a9df, GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#'5bb75b, endColorstr='#'5bb75b, GradientType=0);
   border-color: #51a351 #51a351 #387038;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
@@ -1787,7 +1787,7 @@ li.current {
 .btn-success.active,
 .btn-success.disabled,
 .btn-success[disabled] {
-  background-color: #29a9df;
+  background-color: #5bb75b;
 }
 
 .btn-success:active,
