--- a/app/views/feeds/_feed.html.erb
+++ b/app/views/feeds/_feed.html.erb
@@ -5,6 +5,8 @@
 
 <%end%>
 
+<%= render 'layouts/sorting' %>
+
 <div id="story-container" >
 	<div id="portfolio-wrapper" class="row">
 	<%= render 'users/friends' %>
