--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -39,14 +39,28 @@
 			<div class="anounce">
 				<div><!-- <span class="brand">Feed<span>Fiction</span></span> is the place to write short stories together with friends.</div> -->
 
-				<div>Turn Photos into Beautiful Stories</div>
+				<div>A pictures is worth a thousand, but let's start with 55</div>
 				<!-- <div>It’s Fun, Easy and Only 55 Words</div> -->
+					<ul class="hp-instructions">
+						<li>
+							<span class="circle-color-full">1</span>
+							Choose a photo
+						</li>
+						<li>
+							<span class="circle-color-full">2</span>
+							Start a story
+						</li>
+						<li>
+							<span class="circle-color-full">3</span>
+							Let others continue
+						</li>
 
-					<!-- <div>Sign up with Facebook and start your story.</div> -->
+					</ul>
+					<div>Feed the fiction. Together</div>
 					<div class="wrapper-sign-in">
 			 			<!-- <span class="sign-in btn-signin-large"></span> -->
-			 			<a href="#" class="btn btn-large btn-primary sign-in" data-function="startStoryHomePageWizard"><i class="social-facebook-hover ico-white"></i><span>Start Here</span></a>
-			 			<div>Try it. It's free</div>
+			 			<a href="#" class="btn btn-large btn-success sign-in" data-function="startStoryHomePageWizard"><i class="ico-circle-plus ico-white"></i><span>Start a story now!</span></a>
+			 			
 			 		</div>
 
 				 	
