--- a/app/views/layouts/_sorting.html.erb
+++ b/app/views/layouts/_sorting.html.erb
@@ -1,4 +1,16 @@
-<li class="dropdown pull-right">
+
+<div class="btn-group pull-right sorting" data-toggle="buttons-radio">
+	<span>Sort:</span>
+	<a href="?sort=most" class="btn btn-small <%=@most %>">Most Recent</a>
+  <a href="?sort=uncompleted" class="btn btn-small <%=@uncompleted %>">Uncompleted</a>
+  <a href="?sort=completed" class="btn btn-small <%=@completed %>">Completed</a>
+</div>
+
+
+
+
+
+<!-- <li class="dropdown pull-right">
 
   <a class="dropdown-toggle" data-toggle="dropdown" href="#">Sorting <b class="caret"></b></a>
   <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -6,4 +18,4 @@
             <li><a href="#">Completed</a></li>
             <li><a href="#">Uncompleted</a></li>
   </ul>
-</li>
+</li> -->
