--- a/app/views/layouts/_sorting.html.erb
+++ b/app/views/layouts/_sorting.html.erb
@@ -1,9 +1,10 @@
-
-<div class="btn-group pull-right sorting" data-toggle="buttons-radio">
-	<span>Sort:</span>
-	<a href="?sort=most" class="btn btn-small <%=@most %>">Most Recent</a>
-  <a href="?sort=uncompleted" class="btn btn-small <%=@uncompleted %>">Uncompleted</a>
-  <a href="?sort=completed" class="btn btn-small <%=@completed %>">Completed</a>
+<div class="sorting">
+  <div class="btn-group pull-right" data-toggle="buttons-radio">
+  	<span>Sort:</span>
+  	<a href="?sort=most" class="btn btn-small <%=@most %>">Most Recent</a>
+    <a href="?sort=uncompleted" class="btn btn-small <%=@uncompleted %>">Uncompleted</a>
+    <a href="?sort=completed" class="btn btn-small <%=@completed %>">Completed</a>
+  </div>
 </div>
 
 
