--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -39,9 +39,10 @@
 			<div class="anounce">
 				<div><!-- <span class="brand">Feed<span>Fiction</span></span> is the place to write short stories together with friends.</div> -->
 
-				<div>A pictures is worth a thousand, but let's start with 55</div>
-				<!-- <div>It’s Fun, Easy and Only 55 Words</div> -->
+				<div>A pictures is worth a 1,000 words. We do it with 55</div>
+				
 					<ul class="hp-instructions">
+						<!-- <li>How it works:</li> -->
 						<li>
 							<span class="circle-color-full">1</span>
 							Choose a photo
@@ -56,15 +57,14 @@
 						</li>
 
 					</ul>
-					<div>Feed the fiction. Together</div>
 					<div class="wrapper-sign-in">
 			 			<!-- <span class="sign-in btn-signin-large"></span> -->
-			 			<a href="#" class="btn btn-large btn-success sign-in" data-function="startStoryHomePageWizard"><i class="ico-circle-plus ico-white"></i><span>Start a story now!</span></a>
+			 			<a href="#" class="btn btn-large btn-success sign-in" data-function="startStoryHomePageWizard"><i class="ico-edit ico-white"></i><span>Start a story now!</span></a>
 			 			
 			 		</div>
 
 				 	
-				 	<!-- <div class="slogan">FeedFiction is reinventing storytelling in 55 words</div> -->
+				 	<!--<div class="slogan">Feed the fiction. Together</div>
 			 
 				
 				<!-- <div class="story-panel">
