fix hp location

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2216,6 +2216,7 @@ ul.commentlist {
 			ul {
 				font-size: 27px;
 				padding: 32px;
+				margin-left: 30px;
 				li {
 					display: inline;
 					padding-right: 40px;
