--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -39,7 +39,7 @@
 			<div class="anounce">
 				<div><!-- <span class="brand">Feed<span>Fiction</span></span> is the place to write short stories together with friends.</div> -->
 
-				<div>A pictures is worth a 1,000 words. We do it with 55</div>
+				<div>A picture is worth a 1,000 words. We do it with 55.</div>
 				
 					<ul class="hp-instructions">
 						<!-- <li>How it works:</li> -->
@@ -59,7 +59,7 @@
 					</ul>
 					<div class="wrapper-sign-in">
 			 			<!-- <span class="sign-in btn-signin-large"></span> -->
-			 			<a href="#" class="btn btn-large btn-success sign-in" data-function="startStoryHomePageWizard"><i class="ico-edit ico-white"></i><span>Start a story now!</span></a>
+			 			<a href="#" class="btn btn-large btn-success sign-in" data-function="startStoryHomePageWizard"><i class="ico-edit ico-white"></i><span>Start a story now</span></a>
 			 			
 			 		</div>
 
