starting user page

--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -1,5 +1,5 @@
 <!-- start: Slider -->
-<% content_for :home do %>
+<% content_for :fold do %>
 <div class="modal hide fade in" id="StartStoryHomePageWizard">
    <div class="modal-footer"><a class="sign-in">Try it, It's free</a></div>
 </div>
