--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,11 @@
 <% provide(:title, @user.name) %>
+
+<% content_for :fold do %>
+<div>
+<div class="background"></div>
+  
+</div>
+<% end%>
 <section id="user-header">
   <%= render 'user_header' %>
 </section>
