--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2358,6 +2358,36 @@ ul.commentlist {
 	}
 }
 
+@media only screen and (min-width: 960px){
+
+	.navbar-second-nav {
+		position: relative;
+
+	}
+
+	header{
+		.navbar-second-nav {
+			border: solid 1px #eee;
+			margin: 0 auto;
+			display: inline-block;
+			.navbar{
+			
+				
+				
+				.btn-navbar{
+					display: block;
+					left: 0;
+				}
+			}
+			
+		} 
+
+	} 
+
+
+
+}
+
 /* Higher than 960 (desktop devices)
 ====================================================================== */
 @media only screen and (min-width: 960px) and (max-width: 1599px){
