--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,19 @@
     <!--start: Row -->
     <div class="row">
      <%= render 'layouts/logo_nav' %>
+      
+     <!--  <div class="navbar-second-nav">   
+        <div class="navbar navbar-inverse">
+          <div class="navbar-inner">
+           
+              <a class="btn btn-navbar" >
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </a>
+            </div> 
+          </div>   
+      </div> -->
         
       <!--start: Navigation -->
        <div class="navbar-actions">
@@ -70,7 +83,7 @@
         
       </div>  
       <!--end: Navigation -->
-        
+
     </div>
     <!--end: Row -->
     <%# if current_user%>
