--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -39,24 +39,9 @@
 			<div class="anounce">
 				<div><!-- <span class="brand">Feed<span>Fiction</span></span> is the place to write short stories together with friends.</div> -->
 
-				<div>A picture is worth a 1,000 words. We do it with 55.</div>
+				<div>FeedFiction is the best place to read and write short stories together with people from all over the world.</div>
 				
-					<ul class="hp-instructions">
-						<!-- <li>How it works:</li> -->
-						<li>
-							<span class="circle-color-full">1</span>
-							Choose a photo
-						</li>
-						<li>
-							<span class="circle-color-full">2</span>
-							Start a story
-						</li>
-						<li>
-							<span class="circle-color-full">3</span>
-							Let others continue
-						</li>
-
-					</ul>
+					
 					<div class="wrapper-sign-in">
 			 			<!-- <span class="sign-in btn-signin-large"></span> -->
 			 			<a href="#" class="btn btn-large btn-success sign-in" data-function="startStoryHomePageWizard"><i class="ico-edit ico-white"></i><span>Start a story now</span></a>
@@ -64,7 +49,7 @@
 			 		</div>
 
 				 	
-				 	<!--<div class="slogan">Feed the fiction. Together</div>
+				 	<div class="slogan">FeedFiction stories start with a photo and are exactly 55 words long.</div>
 			 
 				
 				<!-- <div class="story-panel">
