remove the slogan from ph

--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -44,12 +44,12 @@
 					
 					<div class="wrapper-sign-in">
 			 			<!-- <span class="sign-in btn-signin-large"></span> -->
-			 			<a href="#" class="btn btn-large btn-success sign-in" data-function="startStoryHomePageWizard"><i class="ico-edit ico-white"></i><span>Start a story now</span></a>
+			 			<a href="#" class="btn btn-large btn-success sign-in" data-function="startStoryHomePageWizard"><i class="ico-edit ico-white"></i><span>Start here</span></a>
 			 			
 			 		</div>
 
 				 	
-				 	<div class="slogan">FeedFiction stories start with a photo and are exactly 55 words long.</div>
+				 	<!-- <div class="slogan">FeedFiction stories start with a photo and are exactly 55 words long.</div> -->
 			 
 				
 				<!-- <div class="story-panel">
