change deploy file

--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -39,7 +39,7 @@
 			<div class="anounce">
 				<div><!-- <span class="brand">Feed<span>Fiction</span></span> is the place to write short stories together with friends.</div> -->
 
-				<div>FeedFiction is the best place to read and write short stories together with people from all over the world.</div>
+				<div>FeedFiction is the best place to read and write 55 word stories together with people from all over the world.</div>
 				
 					
 					<div class="wrapper-sign-in">
