--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -39,12 +39,14 @@
 			<div class="anounce">
 				<div><!-- <span class="brand">Feed<span>Fiction</span></span> is the place to write short stories together with friends.</div> -->
 
-				<div>FeedFiction is the best place to read and write 55 word stories together with people from all over the world.</div>
+				<div>Practice English writing for FREE.</div>
+<div>Photo storytelling is the best way to practice English writing.</div>
+<div>Do it together with people from all over the world.</div>
 				
 					
 					<div class="wrapper-sign-in">
 			 			<!-- <span class="sign-in btn-signin-large"></span> -->
-			 			<a href="#" class="btn btn-large btn-success sign-in" data-function="startStoryHomePageWizard"><i class="ico-edit ico-white"></i><span>Start here</span></a>
+			 			<a href="#" class="btn btn-large btn-primary sign-in" data-function="startStoryHomePageWizard"><i class="ico-edit ico-white"></i><span>Sign up with Facebook</span></a>
 			 			
 			 		</div>
 
