--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -39,9 +39,8 @@
 			<div class="anounce">
 				<div><!-- <span class="brand">Feed<span>Fiction</span></span> is the place to write short stories together with friends.</div> -->
 
-				<div>Practice English writing for FREE.</div>
-<div>Photo storytelling is the best way to practice English writing.</div>
-<div>Do it together with people from all over the world.</div>
+				<div>Collaborative Photo Storytelling in 55 words is new social engagement.</div>
+<div>Join now and Feed the Fiction with people around the world.</div>
 				
 					
 					<div class="wrapper-sign-in">
