--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -38,9 +38,9 @@
 		<div class="container">
 			<div class="anounce">
 				<div><!-- <span class="brand">Feed<span>Fiction</span></span> is the place to write short stories together with friends.</div> -->
-
-				<div>Collaborative Photo Storytelling in 55 words is new social engagement.</div>
-<div>Join now and Feed the Fiction with people around the world.</div>
+				<% @home_page_texts.each do |text|%>
+				<div><%= text.name %></div>
+				<% end %>
 				
 					
 					<div class="wrapper-sign-in">
